add diagram
